--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "mongoose": "^5.0.0-rc1"
+    "mongoose": "^4.1.12"
   }
 }
